--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,11 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:7.10
+      - image: circleci/node:8.15.0
 
     working_directory: ~/repo
 
     steps:
+      - checkout
       - run: npm install
       - run: npm test
